log
Wed 24 Apr 2024 08:36:09 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:5: error: expected expression before ‘}’ token
   51 |     }
      |     ^
Compilation failed
3d64eb3
Wed 24 Apr 2024 08:36:41 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
f6b85f8
